--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
   },
   "devDependencies": {
     "@types/node": "24.2.1",
-    "@types/react": "19.1.9",
+    "@types/react": "^18.3.23",
+    "@types/react-dom": "^18.3.7",
     "autoprefixer": "10.4.19",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.4",
     "postcss": "8.4.41",
-    "tailwindcss": "3.4.10"
+    "tailwindcss": "3.4.10",
+    "typescript": "^5.9.2"
   }
 }
