--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "export": "next export",
-    "deploy": "next build && next export"
+    "deploy": "next build"
   },
   "dependencies": {
     "framer-motion": "11.0.0",
